Fixed suggestion item wrapping issues

--- a/design-vault/.obsidian/themes/Deep Work.css
+++ b/design-vault/.obsidian/themes/Deep Work.css
@@ -290,17 +290,13 @@ body .prompt-results {
   padding: calc(1rem * 1);
 }
 body .prompt-results .suggestion-item {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  align-content: center;
   border-left: 5px solid transparent;
   border-radius: 6px;
   transition: border-left 0.25s cubic-bezier(0.075, 0.82, 0.165, 1), background-color 0.75s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.75s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 body .prompt-results .suggestion-item .suggestion-hotkey {
-  margin-left: auto;
+  position: relative;
+  top: 0.25em;
 }
 body .prompt-results .suggestion-item.is-selected {
   background-color: var(--background-secondary-alt);
