--- a/obsidian.css
+++ b/obsidian.css
@@ -318,11 +318,6 @@ body .prompt-results {
   padding: calc(1rem * 1);
 }
 body .prompt-results .suggestion-item {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  align-content: center;
   border-left: 5px solid transparent;
   border-radius: 6px;
   transition: border-left 0.25s
@@ -331,7 +326,8 @@ body .prompt-results .suggestion-item {
     color 0.75s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 body .prompt-results .suggestion-item .suggestion-hotkey {
-  margin-left: auto;
+  position: relative;
+  top: 0.25em;
 }
 body .prompt-results .suggestion-item.is-selected {
   background-color: var(--background-secondary-alt);
