--- a/src/components/ui/_prompt.scss
+++ b/src/components/ui/_prompt.scss
@@ -14,13 +14,6 @@
 
       .suggestion {
         &-item {
-          // Center everything in suggestion element
-          display: flex;
-          flex-flow: row nowrap;
-          justify-content: flex-start;
-          align-items: center;
-          align-content: center;
-
           border-left: border($border-width, transparent);
           border-radius: $border-radius-default;
           transition: transition(
@@ -33,9 +26,10 @@
             ),
             transition(color, $transition-speed-default);
 
-          // Put hotkey to the right
+          // Verticall center hotkey
           .suggestion-hotkey {
-            margin-left: auto;
+            position: relative;
+            top: 0.25em;
           }
 
           &.is-selected {
